--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -1,7 +1,7 @@
 
 /*body{ padding:0px; background-color: white;}*/
 
-#dashboard_container {height:40px;}
+#dashboard {height:40px;}
 #login_container {width:300px; margin-top:100px;}
 
 .container {z-index: 1060 !important; padding: 10px; background: white; border-radius: 0px;box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); border: 1px solid #ddd;margin-top: 10px;}
@@ -19,17 +19,8 @@
 #map-canvas img {max-width: none; }
 /*#map-canvas .loader {margin:10% auto; display: block;}*/
 
-/*#map-controls .map-zoom {float:left;}
-#map-controls .map-zoom button {margin-bottom: 5px;}
-#map-controls .map-input {float:right;}
-*/
-footer {overflow: hidden;}
 .float-left {float: left;}
 .float-right {float: right;}
-
-/*#location {margin: 0 0 20px; position: absolute; bottom: 0px;}
-#location .muted{padding: 5px;}
-*/
 
 .progress {width: 100%; margin: auto;}
 .progress div.bar a {display: block; text-decoration: none; color: white; overflow: hidden;}
@@ -47,18 +38,8 @@ footer {overflow: hidden;}
 
 .info:hover {left:0;}
 
-#footer_wrapper {
-	position: absolute;
-	bottom: 0px;
-	height: 80px;
-	width: 100%;
-}
-
-#map-legend{
-	z-index: 1060;
-	padding: 10px;
-	background: white;
-}
+#legend {position: absolute; bottom: 0px; height: 80px; width: 100%; }
+#legend .container {z-index: 1060; padding: 10px; background: white; }
 
 @media (max-width: 979px) and (min-width: 768px){
 	/*#container {margin-left: 40px;}*/
