--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -6,7 +6,7 @@
 #map-canvas .loader {overflow: hidden; margin-top: 200px; /*min-height:100%;*/ }
 #map-canvas .loader .bar {height: 100px; }
 #map-controls {float:left;}
-#legend {position: absolute; bottom: 0px; height: 80px; width: 100%; }
+#legend {position: absolute; bottom: 0px; height: 80px; width: 100%; display: none;}
 #legend .container {z-index: 1060; padding: 10px; background: white; }
 #legend .progress {width: 100%; margin: auto;}
 #legend .progress div.bar a {display: block; text-decoration: none; color: white; overflow: hidden;}
@@ -22,9 +22,9 @@
 .info {transition:all 0.4s; -webkit-transition:all 0.4s; -moz-transition:all 0.4s; line-height:50px; height:50px; background: white; border: 1px solid #ddd; width: 450px; position: fixed; left:-400px; box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)}
 .info .title {font-size: 28px; /*color: #0088cc;*/color: #555; width: 50px; text-align: center; cursor: pointer; text-shadow:0 1px 0 #ffffff; margin-left:10px;}
 
-#location {bottom:80px;}
-#copyright {bottom:140px;}
-#debug {bottom:200px;}
+#copyright {bottom:80px;}
+#location {bottom:140px; display: none;}
+#debug {bottom:200px; display: none;}
 
 .info:hover {left:0;}
 
@@ -52,3 +52,182 @@
     -webkit-transform: rotate(-45deg);
 
 }
+
+
+#modal-site input.name {width:500px; min-width: 500px; max-width: 500px;}
+#modal-site textarea {width:500px;}
+
+#modal-site .switch {width: 100px; margin-right: 14px; padding: 10px 30px 20px ; border-radius: 10px; border:1px solid #ccc; float: left;}
+#modal-site .switch .head {text-align: center; color: #A1A1A1; margin:20px;}
+#modal-site .switch .head h5 {}
+#modal-site .switch .head i {font-size: 28px;}
+#modal-site .switch .onoffswitch {margin: 0 10px;}
+
+
+/* iScroll */
+
+#wrapper {
+    width:530px;
+    height:160px;
+
+    float:left;
+    position:relative;  /* On older OS versions "position" and "z-index" must be defined, */
+    z-index:1;          /* it seems that recent webkit is less picky and works anyway. */
+    overflow:hidden;
+
+    background:#aaa;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -o-border-radius:10px;
+    border-radius:10px;
+    background:#e3e3e3;
+}
+
+#scroller {
+    width:2650px;
+    height:100%;
+    float:left;
+    padding:0;
+}
+
+#scroller ul {
+    list-style:none;
+    display:block;
+    float:left;
+    width:100%;
+    height:100%;
+    padding:0;
+    margin:0;
+    text-align:left;
+}
+
+#scroller li {
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -o-box-sizing:border-box;
+    box-sizing:border-box;
+    display:block; float:left;
+    width:530px;
+    height:160px;
+    text-align:center;
+    font-family:georgia;
+    font-size:18px;
+    line-height:140%;
+}
+
+
+#nav {
+    width:530px;
+    float:left;
+}
+
+#prev, #next {
+    float:left;
+    font-weight:bold;
+    font-size:14px;
+    padding:5px 0;
+    width:80px;
+}
+
+#next {
+    float:right;
+    text-align:right;
+}
+
+#indicator, #indicator > li {
+    display:block; float:left;
+    list-style:none;
+    padding:0; margin:0;
+}
+
+#indicator {
+    width:110px;
+    padding:12px 0 0 30px;
+}
+
+#indicator > li {
+    text-indent:-9999em;
+    width:8px; height:8px;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    -o-border-radius:4px;
+    border-radius:4px;
+    background:#ddd;
+    overflow:hidden;
+    margin-right:4px;
+}
+
+#indicator > li.active {
+    background:#888;
+}
+
+#indicator > li:last-child {
+    margin:0;
+}
+
+/* iScroll END */
+
+
+
+/* ON - OFF switch */
+
+.onoffswitch {
+    position: relative; width: 80px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+
+.onoffswitch-checkbox {
+    display: none;
+}
+
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #FFFFFF; border-radius: 50px;
+}
+
+.onoffswitch-inner {
+    width: 200%; margin-left: -100%;
+    -moz-transition: margin 0.3s ease-in 0s; -webkit-transition: margin 0.3s ease-in 0s;
+    -o-transition: margin 0.3s ease-in 0s; transition: margin 0.3s ease-in 0s;
+}
+
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    float: left; width: 50%; height: 25px; padding: 0; line-height: 25px;
+    font-size: 12px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+}
+
+.onoffswitch-inner:before {
+    content: "ON";
+    padding-left: 12px;
+    background-color: #EEEEEE; color: #333333;
+}
+
+.onoffswitch-inner:after {
+    content: "OFF";
+    padding-right: 12px;
+    background-color: #EEEEEE; color: #333333;
+    text-align: right;
+}
+
+.onoffswitch-switch {
+    width: 20px; margin: 2.5px;
+    background: #A1A1A1;
+    border: 2px solid #FFFFFF; border-radius: 50px;
+    position: absolute; top: 0; bottom: 0; right: 51px;
+    -moz-transition: all 0.3s ease-in 0s; -webkit-transition: all 0.3s ease-in 0s;
+    -o-transition: all 0.3s ease-in 0s; transition: all 0.3s ease-in 0s;
+}
+
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px;
+    background-color: #5EB95E;
+}
+
+
+/* ON - OFF switch END */
+
