--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -29,7 +29,7 @@
 #debug {bottom:200px; display: none;}
 
 .info:hover {left:0;}
-2
+
 label {color: #999; cursor: initial;}
 
 #view-filter {margin-left: 70px}
@@ -43,14 +43,20 @@ label {color: #999; cursor: initial;}
 .modal .switch .head {color: #666; margin:20px; text-align: center;}
 .modal .switch .head i {font-size: 28px;}
 .modal .switch .onoffswitch {margin: 0 10px;}
-.modal .loadImage {overflow: hidden; position: relative; margin:10px 0;}
-.modal .loadImage [type='file'] {cursor: inherit; display: block; font-size: 999px; filter: alpha(opacity=0); min-height: 100%; min-width: 100%; opacity: 0; position: absolute; right: 0; text-align: right; top: 0; }
-.modal .loc_container,
-.modal .image_container {display: inline-block; width: 526px; height: 250px; font-size: 0; line-height: 0; vertical-align: middle; background-size: 100%; background-position: 50% 50%; background-repeat: no-repeat; background-image: url('../img/530x250px.png'); overflow: hidden; position: relative; }
-.modal .image_container { border: 1px dashed #999; }
-.modal .image_container .dimensions { position: absolute; background: #333; color:#FFF; width:80px; height: 20px; right:0; top:0; font-size: 12px; line-height: 20px; text-align: center;}
-.modal .loc_container .longlat { position: absolute; background: #333; color:#FFF; width:140px; height: 20px; right:0; top:0; font-size: 12px; line-height: 20px; text-align: center;}
-#modal-marker .loader {margin:150px 0; display: block; text-align: center; display: none;}
+.modal .load-image {overflow: hidden; position: relative; margin:10px 0; float: left;}
+.modal .load-image [type='file'] {cursor: inherit; display: block; font-size: 999px; filter: alpha(opacity=0); min-height: 100%; min-width: 100%; opacity: 0; position: absolute; right: 0; text-align: right; top: 0; }
+.modal .upload-image {float: left; margin: 10px 0;}
+.modal .progress {float: left; margin: 5px 10px 5px 0;}
+.modal iframe {width:0%;height:0px;border:0px}
+.modal iframe.debug {width:100%;height:200px;}
+
+
+.modal .loc-container,
+.modal .image-container {display: inline-block; width: 526px; height: 250px; font-size: 0; line-height: 0; vertical-align: middle; background-size: 100%; background-position: 50% 50%; background-repeat: no-repeat; background-image: url('../img/530x250px.png'); overflow: hidden; position: relative; }
+.modal .image-container { border: 1px dashed #999; }
+.modal .image-container .dimensions { position: absolute; background: #333; color:#FFF; width:80px; height: 20px; right:0; top:0; font-size: 12px; line-height: 20px; text-align: center;}
+.modal .loc-container .longlat { position: absolute; background: #333; color:#FFF; width:140px; height: 20px; right:0; top:0; font-size: 12px; line-height: 20px; text-align: center;}
+#modal-marker .loader {text-align: left; display: none; margin: 10px 0; float: left; line-height: 30px}
 #modal-marker .switch.cat {width: 60px; padding: 20px 25px; margin: 0 3px; cursor: pointer; text-align: center;}
 #modal-marker .switch.cat .head {margin: 10px;}
 #modal-marker .switch.cat input {margin-top: 30px;}
