--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -50,7 +50,7 @@ label {color: #999; cursor: initial;}
 .modal iframe {width:0%;height:0px;border:0px solid #FFF;}
 .modal iframe.debug {width:100%;height:200px;}
 
-
+.modal .image-wrapper {width: 526px; height: 250px; overflow: auto;}
 .modal .loc-container,
 .modal .image-container {display: inline-block; width: 526px; height: 250px; font-size: 0; line-height: 0; vertical-align: middle; background-size: 100%; background-position: 50% 50%; background-repeat: no-repeat; background-image: url('../img/530x250px.png'); overflow: hidden; position: relative; }
 .modal .image-container { border: 1px dashed #999; }
