--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -39,11 +39,14 @@ label {color: #999; cursor: initial;}
 
 .modal form {margin:0;}
 .modal input.name {width:500px;}
-.modal textarea {width:500px; min-width: 500px; max-width: 500px;}
+.modal textarea {width:515px; min-width: 515px; max-width: 515px;}
 .modal .switch {width: 100px; margin:0 7px; padding: 10px 30px 20px ; border-radius: 10px; border:1px solid #ccc; float: left; background:#f1f1f1;}
 .modal .switch .head {color: #666; margin:20px; text-align: center;}
 .modal .switch .head i {font-size: 28px;}
 .modal .switch .onoffswitch {margin: 0 10px;}
+.modal .switch .pin {position: relative; }
+.modal .switch .pin img {z-index: 2; position: relative;}
+.modal .switch .pin img.shadow {z-index: 1; position: absolute; bottom: 3px;left: 10px;}
 .modal .load-image {overflow: hidden; position: relative; margin:10px 0; float: left;}
 .modal .load-image [type='file'] {cursor: inherit; display: block; font-size: 999px; filter: alpha(opacity=0); min-height: 100%; min-width: 100%; opacity: 0; position: absolute; right: 0; text-align: right; top: 0; }
 .modal .upload-image {float: left; margin: 10px 0;}
