--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,5 +3,134 @@
 * http://www.apache.org/licenses/LICENSE-2.0.txt
 */
 
-#map-canvas {height: 50%; min-height:50%; background-color: #e5e5e5; width: 100%; position: absolute; top:0; z-index: -1;}
+
+
+body {margin: 0; padding: 0; font-size: 14px; background: #2A2A2A; font-family: "Roboto", Helvetica, Arial, serif; color:#FFF;}
+
+a {color:#FFFFF;}
+
+#map-wrapper {height: 500px; max-height: 500px;position: relative;}
+#map-canvas  {
+    height: 500px; max-height: 500px; background-color: #e5e5e5;
+    width: 100%;  z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 #map-canvas img {max-width: none; }
+#map-canvas img {max-width: none; }
+
+#map-controls {background: #2A2A2A;}
+
+header.main {width: 100%; height: 60px; z-index: 20;}
+header.main .logo img {float: left; margin: 5px; height: 75px;}
+header.main .logo h1 {line-height: 60px;margin: 0;padding: 0; color:#FFF;float: left;}
+header.main .logo a {line-height: 60px;margin: 0;padding: 0; color:#FFF;}
+
+header.main .toggle-menu {margin: 10px; display: block; float: right; cursor: pointer; position: absolute; right: 0; top: 0; width: 24px; padding: 13px 10px; z-index: 20; }
+header.main .toggle-menu span {height: 3px; border-radius: 10px; width: 100%; display: block; background-color: #29AAE1; margin-bottom: 3px; }
+
+
+
+/*article .location {display: inline-block; width: 100%; height: 250px; font-size: 0; line-height: 0; vertical-align: middle; background-size: 100%; background-position: 50% 50%; background-repeat: no-repeat; background-image: url('../../admin/img/530x250px.png'); overflow: hidden; position: relative; }*/
+article .location img {width: 100%; height:auto; text-align: center;}
+
+
+.scrollTop {
+    width: 100%;
+    padding: 10px;
+    margin:50px;
+    display: block;
+
+}
+/* NAV */
+
+.header-nav{
+    visibility: hidden;
+    background: #27A6E1;
+    z-index: 1;
+    transition:all 0.4s;
+    -webkit-transition:all 0.4s;
+    -moz-transition:all 0.4s;
+    width: 100%;
+    position: relative;
+    top: -500px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+.header-nav.active {
+    top: 0px;
+    visibility: visible;
+}
+
+.header-nav ul {
+    padding: 0; margin: 0;
+}
+
+.header-nav ul li {
+    list-style: none;
+    padding: 15px;
+}
+
+.header-nav ul.close li {
+    text-align: right;
+}
+
+.banner-wrapper {
+background: #2A2A2A;
+text-align: left;
+-webkit-box-shadow: 0 0 0.21429em rgba(22, 38, 51, 0.3);
+-moz-box-shadow: 0 0 0.21429em rgba(22,38,51,0.3);
+box-shadow: 0 0 0.21429em rgba(22, 38, 51, 0.3);
+overflow: hidden;
+position: relative;
+height: 60px;
+z-index: 20;
+}
+.menu-icon {
+float: right;
+font-size: 2.14286em;
+color: #666;
+margin: 0.5em 0;
+padding: 0 1em 0 0.26667em;
+margin-right: -1em;
+-webkit-transition: color 0.35s linear;
+-moz-transition: color 0.35s linear;
+-o-transition: color 0.35s linear;
+transition: color 0.35s linear;
+}
+
+
+
+.button {
+    font-weight: 400;
+    -webkit-border-radius: 4px;
+    background-color: #009FDD;
+    text-shadow: 0 1px #0072C7;
+    color: #FFF;
+    border:0;
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 0.3em 0.8em;
+    display: inline-block;
+    line-height: 1.6em;
+    font-size: 1.3em;
+    text-decoration: none;
+    letter-spacing: 0.2em;
+}
+
+.black{
+    background: #2A2A2A;
+}
+
+.button:hover{
+background-color: #2a2a2a;
+color: #F1F1F1;
+text-shadow: 0 -1px 1px #0072C7;
+}
+
+body {
+    max-width: 100%;
+    position: static;
+    border: none;
+}
