--- a/app/css/style.css
+++ b/app/css/style.css
@@ -4,102 +4,68 @@
 */
 
 
-
-body {margin: 0; padding: 0; font-size: 14px; background: #2A2A2A; font-family: "Roboto", Helvetica, Arial, serif; color:#FFF;}
+body {margin: 0; padding: 0; font-size: 14px; font-family: "Roboto", Helvetica, Arial, serif; color:#FFF; background: url(../img/bg.png); max-width: 100%; position: static; border: none; }
+h2 {text-align: center; margin: 100px 0 10px; padding: 18px 0; background: #2A2A2A; color: #DDD;letter-spacing: 0.2em;font-weight: normal;}
 
 a {color:#FFFFF;}
+.small {font-size: 12px; color:#999;}
+.github {color:#EEE; font-size: 30px; text-decoration: none;}
+.clearfix {clear: both;}
 
 #map-wrapper {height: 500px; max-height: 500px;position: relative;}
-#map-canvas  {
-    height: 500px; max-height: 500px; background-color: #e5e5e5;
-    width: 100%;  z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-#map-canvas img {max-width: none; }
+
+#map-canvas  {height: 500px; max-height: 500px; background-color: #e5e5e5; width: 100%;  z-index: -1; position: absolute; top: 0; left: 0; }
 #map-canvas img {max-width: none; }
 
-#map-controls {background: #2A2A2A;}
+#map-controls {background: #2A2A2A;position: relative;}
+#map-controls #zoomIn {position: absolute; left:10px; top: -170px;}
+#map-controls #mapType {position: absolute; left:10px; top: -120px;}
+#map-controls #zoomOut {position: absolute; left:10px; top: -70px}
 
-header.main {width: 100%; height: 60px; z-index: 20;}
-header.main .logo img {float: left; margin: 5px; height: 75px;}
-header.main .logo h1 {line-height: 60px;margin: 0;padding: 0; color:#FFF;float: left;}
-header.main .logo a {line-height: 60px;margin: 0;padding: 0; color:#FFF;}
+header.main {width: 100%; height: 60px; z-index: 20;background: #2A2A2A;}
+header.main .info {background: #2A2A2A; text-align: left; -webkit-box-shadow: 0 0 0.21429em rgba(22, 38, 51, 0.3); -moz-box-shadow: 0 0 0.21429em rgba(22,38,51,0.3); box-shadow: 0 0 0.21429em rgba(22, 38, 51, 0.3); overflow: hidden; position: relative; height: 60px; z-index: 20; }
+header.main .info .title img {float: left; margin: 5px; height: 75px;}
+header.main .info .title h1 {line-height: 60px;margin: 0;padding: 0; color:#FFF;float: left;}
+header.main .info .title {color: white; cursor: pointer;}
+header.main .info .toggle-menu {margin: 9px 10px; display: block; float: right; cursor: pointer; position: absolute; right: 0; top: 0;  padding: 10px; z-index: 20; color:#29AAE1; font-size: 25px; line-height: 20px;}
+.header-nav ul.close li {text-align: right; }
+.header-nav {z-index: 1; box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); transition:all 0.4s; -webkit-transition:all 0.4s; -moz-transition:all 0.4s; top: -500px; visibility: hidden; background-color: #27A6E1; }
+.header-nav.active {top: 0px; visibility: visible; }
 
-header.main .toggle-menu {margin: 10px; display: block; float: right; cursor: pointer; position: absolute; right: 0; top: 0; width: 24px; padding: 13px 10px; z-index: 20; }
-header.main .toggle-menu span {height: 3px; border-radius: 10px; width: 100%; display: block; background-color: #29AAE1; margin-bottom: 3px; }
+.nav {overflow: hidden; padding: 10px 0; position: relative; width: 100%; }
+.nav ul {padding: 0; margin: 0; overflow: hidden; }
+.nav ul li {list-style: none; padding: 5px 7px; text-align: center;}
 
-
-
-/*article .location {display: inline-block; width: 100%; height: 250px; font-size: 0; line-height: 0; vertical-align: middle; background-size: 100%; background-position: 50% 50%; background-repeat: no-repeat; background-image: url('../../admin/img/530x250px.png'); overflow: hidden; position: relative; }*/
+article {color:#1a1a1a; padding:0px; background: #EEE;}
+article .article-header {overflow: hidden; background: #2A2A2A; }
+article .article-header nav {float: right; padding: 10px; }
+article h1 {font-size: 30px; font-weight: normal; margin-left:10px;}
+article .content {padding:20px 10px;}
+article .image img,
 article .location img {width: 100%; height:auto; text-align: center;}
+article .empty {color: #CCC;}
+
+.separator {padding: 30px; margin: 40px 0 0; display: block; color: #FFF;text-decoration: none;text-align: right; cursor: pointer;}
+.separator {border-top: 2px dashed #F1F1F1;}
+
+/* SECTIONS */
+footer,
+section {text-align: center; margin: 100px 0;}
+footer {background: #2A2A2A; color:#EEE; margin-bottom: 0;overflow: hidden;}
+footer h2 {color:#333; background:0; }
+footer img {margin: 50px 0 0 20px; height: 80px;}
+footer p {margin: 50px 0}
+footer .separator {display: none;}
 
 
-.scrollTop {
-    width: 100%;
-    padding: 10px;
-    margin:50px;
-    display: block;
+section.category li {float: left; margin: 0 20px;width: 25%; min-width:100px;}
+section.category span {width: 120px; text-align: center;margin: 0 auto;display: block;float: left;}
+section.category img {margin: 30px auto; display: block;}
+section.category .reset {width:70px;height:70px; margin:30px auto;font-size:60px;color:#ddd;}
+section.light .separator {border-top: 2px dashed #2A2A2A; color:#2A2A2A !important; }
 
-}
-/* NAV */
 
-.header-nav{
-    visibility: hidden;
-    background: #27A6E1;
-    z-index: 1;
-    transition:all 0.4s;
-    -webkit-transition:all 0.4s;
-    -moz-transition:all 0.4s;
-    width: 100%;
-    position: relative;
-    top: -500px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-}
-.header-nav.active {
-    top: 0px;
-    visibility: visible;
-}
-
-.header-nav ul {
-    padding: 0; margin: 0;
-}
-
-.header-nav ul li {
-    list-style: none;
-    padding: 15px;
-}
-
-.header-nav ul.close li {
-    text-align: right;
-}
-
-.banner-wrapper {
-background: #2A2A2A;
-text-align: left;
--webkit-box-shadow: 0 0 0.21429em rgba(22, 38, 51, 0.3);
--moz-box-shadow: 0 0 0.21429em rgba(22,38,51,0.3);
-box-shadow: 0 0 0.21429em rgba(22, 38, 51, 0.3);
-overflow: hidden;
-position: relative;
-height: 60px;
-z-index: 20;
-}
-.menu-icon {
-float: right;
-font-size: 2.14286em;
-color: #666;
-margin: 0.5em 0;
-padding: 0 1em 0 0.26667em;
-margin-right: -1em;
--webkit-transition: color 0.35s linear;
--moz-transition: color 0.35s linear;
--o-transition: color 0.35s linear;
-transition: color 0.35s linear;
-}
-
+.menu-icon {float: right; font-size: 2.14286em; color: #666; margin: 0.5em 0; padding: 0 1em 0 0.26667em; margin-right: -1em; -webkit-transition: color 0.35s linear; -moz-transition: color 0.35s linear; -o-transition: color 0.35s linear; transition: color 0.35s linear; }
 
 
 .button {
@@ -116,7 +82,7 @@ transition: color 0.35s linear;
     line-height: 1.6em;
     font-size: 1.3em;
     text-decoration: none;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
 }
 
 .black{
@@ -124,13 +90,8 @@ transition: color 0.35s linear;
 }
 
 .button:hover{
-background-color: #2a2a2a;
-color: #F1F1F1;
-text-shadow: 0 -1px 1px #0072C7;
+    background-color: #2a2a2a;
+    color: #F1F1F1;
+    text-shadow: 0 -1px 1px #0072C7;
 }
 
-body {
-    max-width: 100%;
-    position: static;
-    border: none;
-}
