--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,25 +3,29 @@
 * http://www.apache.org/licenses/LICENSE-2.0.txt
 */
 
-
+/* COMMON */
 body {margin: 0; padding: 0; font-size: 14px; font-family: "Roboto", Helvetica, Arial, serif; color:#FFF; background: url(../img/bg.png); max-width: 100%; position: static; border: none; }
 h2 {text-align: center; margin: 100px 0 10px; padding: 18px 0; background: #2A2A2A; color: #DDD;letter-spacing: 0.2em;font-weight: normal;}
-
 a {color:#FFFFF;}
 .small {font-size: 12px; color:#999;}
 .github {color:#EEE; font-size: 30px; text-decoration: none;}
 .clearfix {clear: both;}
+.left {float: left;}
+.separator {padding: 30px; margin: 40px 0 0; display: block; text-decoration: none; text-align: right; cursor: pointer; border-top: 2px dashed #2A2A2A; color:#2A2A2A !important; }
+.button {font-weight: 400; -webkit-border-radius: 4px; background-color: #009FDD; text-shadow: 0 1px #0072C7; color: #FFF; border:0; cursor: pointer; border-radius: 4px; padding: 0.3em 0.8em; display: inline-block; line-height: 1.6em; font-size: 1.3em; text-decoration: none; letter-spacing: 0.1em; }
+.button:hover {background-color: #2a2a2a; color: #F1F1F1; text-shadow: 0 -1px 1px #0072C7;}
+.black {background: #2A2A2A; }
 
-#map-wrapper {height: 500px; max-height: 500px;position: relative;}
-
-#map-canvas  {height: 500px; max-height: 500px; background-color: #e5e5e5; width: 100%;  z-index: -1; position: absolute; top: 0; left: 0; }
+/* MAP */
+#map-wrapper {height: 400px; max-height: 400px;position: relative;}
+#map-canvas  {height: 400px; max-height: 400px; background-color: #e5e5e5; width: 100%;  z-index: -1; position: absolute; top: 0; left: 0; }
 #map-canvas img {max-width: none; }
-
 #map-controls {background: #2A2A2A;position: relative;}
 #map-controls #zoomIn {position: absolute; left:10px; top: -170px;}
 #map-controls #mapType {position: absolute; left:10px; top: -120px;}
 #map-controls #zoomOut {position: absolute; left:10px; top: -70px}
 
+/* HEADER */
 header.main {width: 100%; height: 60px; z-index: 20;background: #2A2A2A;}
 header.main .info {background: #2A2A2A; text-align: left; -webkit-box-shadow: 0 0 0.21429em rgba(22, 38, 51, 0.3); -moz-box-shadow: 0 0 0.21429em rgba(22,38,51,0.3); box-shadow: 0 0 0.21429em rgba(22, 38, 51, 0.3); overflow: hidden; position: relative; height: 60px; z-index: 20; }
 header.main .info .title img {float: left; margin: 5px; height: 75px;}
@@ -31,67 +35,32 @@ header.main .info .toggle-menu {margin: 9px 10px; display: block; float: right; 
 .header-nav ul.close li {text-align: right; }
 .header-nav {z-index: 1; box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); transition:all 0.4s; -webkit-transition:all 0.4s; -moz-transition:all 0.4s; top: -500px; visibility: hidden; background-color: #27A6E1; }
 .header-nav.active {top: 0px; visibility: visible; }
-
 .nav {overflow: hidden; padding: 10px 0; position: relative; width: 100%; }
 .nav ul {padding: 0; margin: 0; overflow: hidden; }
 .nav ul li {list-style: none; padding: 5px 7px; text-align: center;}
 
-article {color:#1a1a1a; padding:0px; background: #EEE;}
+/* ARTICLE */
+article {color:#1a1a1a; padding:0px; background: #EEE; min-height: 400px;}
+article h1 {font-size: 30px; font-weight: normal; margin-left:10px;}
 article .article-header {overflow: hidden; background: #2A2A2A; }
 article .article-header nav {float: right; padding: 10px; }
-article h1 {font-size: 30px; font-weight: normal; margin-left:10px;}
+article .article-header .counter {float: left; padding: 10px; color: #999; font-size: 1.5em; padding:18px; }
 article .content {padding:20px 10px;}
+article .empty {color: #CCC;}
 article .image img,
 article .location img {width: 100%; height:auto; text-align: center;}
-article .empty {color: #CCC;}
-
-.separator {padding: 30px; margin: 40px 0 0; display: block; color: #FFF;text-decoration: none;text-align: right; cursor: pointer;}
-.separator {border-top: 2px dashed #F1F1F1;}
 
 /* SECTIONS */
-footer,
 section {text-align: center; margin: 100px 0;}
+section.category li {float: left; margin: 0 20px;width: 25%; min-width:100px;}
+section.category span {width: 120px; text-align: center;margin: 0 auto;display: block;float: left;}
+section.category img {margin: 30px auto; display: block;}
+section.category .reset {width:70px;height:70px; margin:30px auto;font-size:60px;color:#ddd;}
+
+/* FOOTER */
+footer {text-align: center; margin: 100px 0; min-height: 600px;}
 footer {background: #2A2A2A; color:#EEE; margin-bottom: 0;overflow: hidden;}
 footer h2 {color:#333; background:0; }
 footer img {margin: 50px 0 0 20px; height: 80px;}
 footer p {margin: 50px 0}
 footer .separator {display: none;}
-
-
-section.category li {float: left; margin: 0 20px;width: 25%; min-width:100px;}
-section.category span {width: 120px; text-align: center;margin: 0 auto;display: block;float: left;}
-section.category img {margin: 30px auto; display: block;}
-section.category .reset {width:70px;height:70px; margin:30px auto;font-size:60px;color:#ddd;}
-section.light .separator {border-top: 2px dashed #2A2A2A; color:#2A2A2A !important; }
-
-
-.menu-icon {float: right; font-size: 2.14286em; color: #666; margin: 0.5em 0; padding: 0 1em 0 0.26667em; margin-right: -1em; -webkit-transition: color 0.35s linear; -moz-transition: color 0.35s linear; -o-transition: color 0.35s linear; transition: color 0.35s linear; }
-
-
-.button {
-    font-weight: 400;
-    -webkit-border-radius: 4px;
-    background-color: #009FDD;
-    text-shadow: 0 1px #0072C7;
-    color: #FFF;
-    border:0;
-    cursor: pointer;
-    border-radius: 4px;
-    padding: 0.3em 0.8em;
-    display: inline-block;
-    line-height: 1.6em;
-    font-size: 1.3em;
-    text-decoration: none;
-    letter-spacing: 0.1em;
-}
-
-.black{
-    background: #2A2A2A;
-}
-
-.button:hover{
-    background-color: #2a2a2a;
-    color: #F1F1F1;
-    text-shadow: 0 -1px 1px #0072C7;
-}
-
