--- a/app/css/style.css
+++ b/app/css/style.css
@@ -8,10 +8,10 @@ body {margin: 0; padding: 0; font-size: 14px; font-family: "Roboto", Helvetica, 
 h2 {text-align: center; margin: 100px 0 10px; padding: 18px 0; background: #2A2A2A; color: #DDD;letter-spacing: 0.2em;font-weight: normal;}
 a {color:#FFFFF;}
 .small {font-size: 12px; color:#999;}
-.github {color:#EEE; font-size: 30px; text-decoration: none;}
+.github {color:#EEE; font-size: 30px; text-decoration: none; display: none;}
 .clearfix {clear: both;}
 .left {float: left;}
-.separator {padding: 30px; margin: 40px 0 0; display: block; text-decoration: none; text-align: right; cursor: pointer; border-top: 2px dashed #2A2A2A; color:#2A2A2A !important; }
+.separator {padding: 30px; margin: 40px 0 0; display: block; text-decoration: none; text-align: right; cursor: pointer; border-top: 2px dashed #2A2A2A; color:#2A2A2A; }
 .button {font-weight: 400; -webkit-border-radius: 4px; background-color: #009FDD; text-shadow: 0 1px #0072C7; color: #FFF; border:0; cursor: pointer; border-radius: 4px; padding: 0.3em 0.8em; display: inline-block; line-height: 1.6em; font-size: 1.3em; text-decoration: none; letter-spacing: 0.1em; }
 .button:hover {background-color: #2a2a2a; color: #F1F1F1; text-shadow: 0 -1px 1px #0072C7;}
 .black {background: #2A2A2A; }
@@ -58,9 +58,9 @@ section.category img {margin: 30px auto; display: block;}
 section.category .reset {width:70px;height:70px; margin:30px auto;font-size:60px;color:#ddd;}
 
 /* FOOTER */
-footer {text-align: center; margin: 100px 0; min-height: 600px;}
+footer {text-align: center; margin: 100px 0;}
 footer {background: #2A2A2A; color:#EEE; margin-bottom: 0;overflow: hidden;}
 footer h2 {color:#333; background:0; }
 footer img {margin: 50px 0 0 20px; height: 80px;}
 footer p {margin: 50px 0}
-footer .separator {display: none;}
+footer .separator {border-top: 2px dashed #F1F1F1; color:#F1F1F1 !important; margin-top:100px;}
