--- a/app/css/style.css
+++ b/app/css/style.css
@@ -24,6 +24,7 @@ a {color:#FFFFF;}
 #map-controls #zoomIn {position: absolute; left:10px; top: -170px;}
 #map-controls #mapType {position: absolute; left:10px; top: -120px;}
 #map-controls #zoomOut {position: absolute; left:10px; top: -70px}
+#map-controls #centerMe {position: absolute; right:10px; top: -70px}
 
 /* HEADER */
 header.main {width: 100%; height: 60px; z-index: 20;background: #2A2A2A;}
